--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [general]
 overwrite = no
-local_store_path = files
+local_store_path =
 log_file = error.log
 
 [data]
-base_path = https:...
+base_path = https://paul.ti.rw.fau.de/~
 include_idms = yes
 idm_list = idm.txt
 file_list = files.txt
@@ -24,7 +24,4 @@ owl     = owl-ld.n3
 rdfs    = rdfs.n3
 rdf     = rdf.n3
 
-[install]
-rdflib
-prettytables
 
