add datatype check

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [general]
 overwrite = no
-local_store_path =
+local_store_path =files
 log_file = error.log
 
 [data]
@@ -10,7 +10,6 @@ idm_list = idm.txt
 file_list = files.txt
 
 [files]
-mapping.ttl
 fld.ttl
 
 [ldfu]
