--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ overwrite = yes
 clear_results = yes
 local_store_path =files
 log_file = error.log
+handle_errors = yes
 
 [data]
 base_path = https://paul.ti.rw.fau.de/~
